fix(statevis): Make minimized statevis z-index higher than transition vis so it can be clicked.

--- a/src/statevis/statevis.css
+++ b/src/statevis/statevis.css
@@ -38,6 +38,7 @@
 .uirStateVisContainer.minimized {
     cursor: pointer;
     transform: scale(0.25);
+    z-index: 60;
 }
 
 .uirStateVisContainer:hover {
